SKN-89 get recent campaigns
